# Hydrangea-C2-Payloads

./: .gitignore  CMakeLists.txt  README.md
Hydrangea-DLL/: CMakeLists.txt
Hydrangea-DLL-Launcher/: CMakeLists.txt
Hydrangea-DLL-Launcher/src/: main.cpp
Hydrangea-DLL/include/: communicator.h  constants.h  export.h  main.h  winapi.h
Hydrangea-DLL/include/communicators/: base.h  http.h
Hydrangea-DLL/include/executor/: executor.h  exit_el_patron.h  fs.h  messagebox.h
Hydrangea-DLL/include/runner/: runner.h
Hydrangea-DLL/include/utils/: buffer.h  event.h  queue.h  random.h  string_aggregator.h  web_requestor.h  winapi.h
Hydrangea-DLL/src/: communicator.cpp  main.cpp
Hydrangea-DLL/src/communicators/: base.cpp  http.cpp
Hydrangea-DLL/src/executor/: executor.cpp  exit_el_patron.cpp  fs.cpp  messagebox.cpp
Hydrangea-DLL/src/runner/: runner.cpp
Hydrangea-DLL/src/utils/: buffer.cpp  event.cpp  queue.cpp  random.cpp  string_aggregator.cpp  web_requestor.cpp  winapi.cpp
Hydrangea-DLL/src/utils/winapi/: filesystem.cpp  process.cpp  security_info.cpp  winapi.cpp
Hydrangea-DLL/src/utils/winapi/loader/: dll_loader_local.cpp  pe_loader_local.cpp  pe_loader_remote.cpp
Testing-Ground/: CMakeLists.txt
Testing-Ground/src/: main.cpp
toolchains/: mingw-w64-x86_64.cmake
utils/: keygen.py  str_deobfuscate.py  str_obfuscate.py
